@@ -2661,6 +2661,14 @@ argument_list|(
 name|sendCost
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|LOG
+operator|.
+name|isDebugEnabled
+argument_list|()
+condition|)
+block|{
 name|LOG
 operator|.
 name|debug
@@ -2683,6 +2691,7 @@ operator|+
 literal|" msecs for RPC and NN processing"
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 return|return
 name|cmd
