@@ -1036,6 +1036,14 @@ argument_list|)
 argument_list|)
 argument_list|)
 decl_stmt|;
+if|if
+condition|(
+name|LOG
+operator|.
+name|isDebugEnabled
+argument_list|()
+condition|)
+block|{
 name|LOG
 operator|.
 name|debug
@@ -1055,6 +1063,7 @@ name|getLength
 argument_list|()
 argument_list|)
 expr_stmt|;
+block|}
 switch|switch
 condition|(
 name|FSImageFormatProtobuf
