@@ -466,6 +466,14 @@ index|[
 name|capacity
 index|]
 expr_stmt|;
+if|if
+condition|(
+name|LOG
+operator|.
+name|isDebugEnabled
+argument_list|()
+condition|)
+block|{
 name|LOG
 operator|.
 name|debug
@@ -483,6 +491,7 @@ operator|+
 name|minLoadFactor
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 DECL|method|LightWeightHashSet ()
 specifier|public
