@@ -845,6 +845,14 @@ argument_list|(
 name|fs
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|LOG
+operator|.
+name|isDebugEnabled
+argument_list|()
+condition|)
+block|{
 name|LOG
 operator|.
 name|debug
@@ -857,6 +865,7 @@ name|getService
 argument_list|()
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 name|hasInitedToken
 operator|=
@@ -903,6 +912,14 @@ operator|!=
 literal|null
 condition|)
 block|{
+if|if
+condition|(
+name|LOG
+operator|.
+name|isDebugEnabled
+argument_list|()
+condition|)
+block|{
 name|LOG
 operator|.
 name|debug
@@ -915,6 +932,7 @@ name|getService
 argument_list|()
 argument_list|)
 expr_stmt|;
+block|}
 name|fs
 operator|.
 name|setDelegationToken
