@@ -1504,6 +1504,14 @@ operator|!=
 literal|null
 condition|)
 block|{
+if|if
+condition|(
+name|LOG
+operator|.
+name|isDebugEnabled
+argument_list|()
+condition|)
+block|{
 name|LOG
 operator|.
 name|debug
@@ -1513,6 +1521,7 @@ operator|+
 name|token
 argument_list|)
 expr_stmt|;
+block|}
 name|canRefreshDelegationToken
 operator|=
 literal|false
@@ -1534,6 +1543,14 @@ operator|!=
 literal|null
 condition|)
 block|{
+if|if
+condition|(
+name|LOG
+operator|.
+name|isDebugEnabled
+argument_list|()
+condition|)
+block|{
 name|LOG
 operator|.
 name|debug
@@ -1543,6 +1560,7 @@ operator|+
 name|token
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 else|else
 block|{
@@ -1594,6 +1612,14 @@ argument_list|(
 literal|null
 argument_list|)
 decl_stmt|;
+if|if
+condition|(
+name|LOG
+operator|.
+name|isDebugEnabled
+argument_list|()
+condition|)
+block|{
 name|LOG
 operator|.
 name|debug
@@ -1603,6 +1629,7 @@ operator|+
 name|token
 argument_list|)
 expr_stmt|;
+block|}
 name|setDelegationToken
 argument_list|(
 name|token
@@ -6794,6 +6821,14 @@ name|IOException
 name|ioe
 parameter_list|)
 block|{
+if|if
+condition|(
+name|LOG
+operator|.
+name|isDebugEnabled
+argument_list|()
+condition|)
+block|{
 name|LOG
 operator|.
 name|debug
@@ -6803,6 +6838,7 @@ operator|+
 name|ioe
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 finally|finally
 block|{
